# MonitorI

./: .gitignore  .replit  DEPLOY.md  Dockerfile  main.py  pyproject.toml  railway.toml
.agents/memory/: MEMORY.md  bot-config.md
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/bot/: package.json
artifacts/bot/.replit-artifact/: artifact.edit.toml
bot/: .env.example  .env.template  .gitignore  accounts.json  cookie.json  db.py  groups.json  main.py  premium-cookie.json  requirements.txt  users.json
scripts/: start-production.sh
